--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -63,6 +63,12 @@ nav ul a {
     text-decoration: none;
 }
 
+tablaGrupos {
+    
+    width: 200px;
+    height: 400px;
+    overflow-y:scroll;
+}
 map{
     text-align: left;
     border-left: 1px solid gray;
@@ -108,6 +114,19 @@ button:hover {
     background-color: #f44336;
 }
 
+.botonAmigos{
+    width: auto;
+    height: auto;
+    padding: 5px 10px;
+    background-color: brown;
+}
+
+.botonVolverInicio{
+    width: auto;
+    height: auto;
+    padding: 5px 10px;
+    background-color: #4CAF50;
+}
 /* Center the avatar image inside this container */
 .imgcontainer {
     text-align: center;
