--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -121,6 +121,13 @@ button:hover {
     background-color: brown;
 }
 
+.botonAgregar{
+    width: auto;
+    height: auto;
+    padding: 5px 10px;
+    background-color: #4CAF50;
+}
+
 .botonVolverInicio{
     width: auto;
     height: auto;
