--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -125,7 +125,7 @@ button:hover {
     width: auto;
     height: auto;
     padding: 5px 10px;
-    background-color: #4CAF50;
+    background-color: cornflowerblue;
 }
 
 .botonVolverInicio{
