--- a/src/main/resources/static/styles.css
+++ b/src/main/resources/static/styles.css
@@ -95,11 +95,13 @@ input[type=text], input[type=password] {
 button {
     background-color: #4CAF50;
     color: white;
-    padding: 14px 20px;
-    margin: 8px 0;
+    padding: 6px 6px;
+    margin: 3px;
     border: none;
     cursor: pointer;
     width: 100%;
+
+    
 }
 
 /* Add a hover effect for buttons */
